# git_commit_gen_ai_bot

./: .gitignore  CLAUDE.md  README.md  create-a-ai-chat-plan.md  pyproject.toml
gitbot/: cli.py  config.py  daemon.py  git_ops.py  hooks.py  message.py  notify.py  pipeline.py  service.py  spinner.py  state.py
gitbot/providers/: __init__.py  base.py  claude_cli.py
